# game

./: CMakeLists.txt  CMakePresets.json  README.txt  main.cpp
code/: main.cpp  parse.cpp  render.cpp
include/: parse.hpp  render.hpp
maps/: map1.txt
